<resources>
    <string name="app_name">Android App</string>
    <string name="Color_Change">Color Change</string>
    <string name="Language">Language</string>
    <string name="User_Information">User Information</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="New_Password">New Password</string>
    <string name="Old_Password">Old Password</string>
    <string name="Update_Password">Update Password</string>
    <string name="Where_is_Jake">Where is Jake ?</string>
    <string name="Next">Next</string>
    <string name="START">START</string>
    <string name="STOP">STOP</string>
    <string name="MONTH">MONTH</string>
    <string name="MATH">MATH</string>
    <string name="DIRECTION">DIRECTION</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Dont_have_an_Account">Dont have an Account?</string>
    <string name="SignUp">SignUp</string>
    <string name="Welcome_to_the_App">Welcome to the App!</string>
    <string name="LEARN">LEARN</string>
    <string name="PLAY">PLAY</string>
    <string name="Question">Question</string>
    <string name="Score">Score</string>
    <string name="FOLLOW">FOLLOW</string>
    <string name="REMEMBER">REMEMBER</string>
    <string name="SIMILAR_PICTURE">SIMILAR PICTURE</string>
    <string name="Register">Register</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Already_Have_an_Account">Already Have an Account</string>
    <string name="ANSWER">ANSWER</string>
    <string name="Congrats">Congrats</string>
    <string name="monthText">monthText</string>
    <string name="English">English</string>
    <string name="Turkish">Turkish</string>
    <string name="Congratulations_You_answered_all_questions_correctly">Congratulations! You answered all questions correctly!</string>
    <string name="Great_job_You_completed_the_quiz">Great job! You completed the quiz!</string>
    <string name="Back">Back</string>
    <string name="Front">Front</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="Blue">Blue</string>
    <string name="Pink">Pink</string>

</resources>