<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stroke_background"
    tools:context=".SettingsActivity"
    tools:ignore="ExtraText">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack11"
        android:layout_width="62dp"
        android:layout_height="40dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/ic_back"
        android:paddingLeft="18dp"
        app:backgroundTint="#F48BAF"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/Language"
        android:textColor="#F48BAF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3">

        <RadioButton
            android:id="@+id/buttonEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/English"
            android:textColor="#595656"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/buttonTurkish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Turkish"
            android:textColor="#595656"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/Color_Change"
        android:textColor="#F48BAF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageRadioGroup"
        app:layout_constraintVertical_bias="0.109" />

    <RadioGroup
        android:id="@+id/languageRadioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.3">

        <RadioButton
            android:id="@+id/stroke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Blue"
            android:textColor="#595656"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/stroke1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pink"
            android:textColor="#595656"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp" />

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>