<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stroke_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="404dp"
        android:layout_height="68dp"
        android:background="#F48BAF"
        app:contentInsetRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:title=" " />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome_to_the_App"
        android:textColor="#F48BAF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144"

        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/monthImageView"
        android:layout_width="260dp"
        android:layout_height="147dp"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:src="@drawable/atmain"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.201"
        app:strokeColor="#F48BAF"
        app:strokeWidth="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLearn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_custom"
        android:text="@string/LEARN"
        app:backgroundTint="#F48BAF"
        app:cornerRadius="10dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlay" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlay"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_custom"
        android:text="@string/PLAY"
        app:backgroundTint="#F48BAF"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.696" />

</androidx.constraintlayout.widget.ConstraintLayout>