<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stroke_background"
    tools:context=".MyAccountActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack10"
        android:layout_width="62dp"
        android:layout_height="40dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/ic_back"
        android:paddingLeft="18dp"
        app:backgroundTint="#F48BAF"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />


    <TextView
        android:id="@+id/emailTextview"
        android:drawableLeft="@drawable/ic_email"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawablePadding="10dp"
        app:autoSizeTextType="uniform"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:background="#F48BAF"
        android:gravity="center_vertical"
        android:text=""
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/scoreTextView1"
        android:layout_width="106dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:background="#F48BAF"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="0/0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextview"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/Update_Password"
        android:textColor="#F48BAF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextView1"
        app:layout_constraintVertical_bias="0.087" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputUpdatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_custom"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Old_Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#F48BAF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.102" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputUpdatePassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_custom"
        android:drawableLeft="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/New_Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#F48BAF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdatePassword"
        app:layout_constraintVertical_bias="0.152" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSumbit1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_custom"
        android:text="@string/SUBMIT"
        app:backgroundTint="#F48BAF"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdatePassword1"
        app:layout_constraintVertical_bias="0.414" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/User_Information"
        android:textColor="#F48BAF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />


</androidx.constraintlayout.widget.ConstraintLayout>