<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stroke_background"
    tools:context=".RememberActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack6"
        android:layout_width="62dp"
        android:layout_height="40dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/ic_back"
        android:paddingLeft="18dp"
        app:backgroundTint="#F48BAF"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textScore3"
        android:layout_width="92dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="0/0"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageQuestion"
        android:layout_width="253dp"
        android:layout_height="221dp"
        android:background="#F48BAF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        app:srcCompat="@drawable/atjakequestion"
        app:strokeColor="#F48BAF"
        app:strokeWidth="10dp" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="140dp"
        android:layout_height="104dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:rotation="-17"
        android:text="@string/Question"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />

    <EditText
        android:id="@+id/editAnswer"
        android:layout_width="223dp"
        android:layout_height="53dp"
        android:background="@drawable/input_custom"
        android:drawablePadding="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ANSWER"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="#F48BAF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageQuestion"
        app:layout_constraintVertical_bias="0.189" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/button_custom"
        android:text="@string/SUBMIT"
        app:backgroundTint="#F48BAF"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAnswer"
        app:layout_constraintVertical_bias="0.218" />


</androidx.constraintlayout.widget.ConstraintLayout>