<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stroke_background"
    tools:context=".LearnActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="62dp"
        android:layout_height="40dp"
        android:background="@drawable/button_custom"
        android:drawableLeft="@drawable/ic_back"
        android:paddingLeft="18dp"
        app:backgroundTint="#F48BAF"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMonth"
        android:layout_width="187dp"
        android:layout_height="138dp"
        app:strokeWidth="10dp"
        app:strokeColor="#F48BAF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/atland2" />

    <TextView
        android:id="@+id/textMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/MONTH"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMonth"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMath"
        android:layout_width="187dp"
        android:layout_height="138dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMonth"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/atmath"
        app:strokeColor="#F48BAF"
        app:strokeWidth="10dp" />

    <TextView
        android:id="@+id/textMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/MATH"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMath"
        app:layout_constraintVertical_bias="0.007" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageDirection"
        android:layout_width="187dp"
        android:layout_height="138dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMath"
        app:layout_constraintVertical_bias="0.251"
        app:srcCompat="@drawable/atdirection"
        app:strokeColor="#F48BAF"
        app:strokeWidth="10dp" />

    <TextView
        android:id="@+id/textDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/DIRECTION"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDirection"
        app:layout_constraintVertical_bias="0.007" />


</androidx.constraintlayout.widget.ConstraintLayout>